hphp/hack/test/typecheck/as_expression/invalid_hint_noreturn.php
<?hh // strict

function foo(mixed $x): void {
  $x as noreturn;
  hh_show($x);
}
